...
          <Stack.Screen name="ActiveWorkoutVisibility" component={ActiveWorkoutVisibilityScreen} options={{ title: 'Notifikasjoner' }} />
          <Stack.Screen name="Data" component={DataScreen} options={{ title: 'Dine data' }} />
          <Stack.Screen name="DeleteTrainingData" component={DeleteTrainingDataScreen} options={{ title: 'Slett treningsdata' }} />
          <Stack.Screen
            name="ExercisePicker"
            component={ExercisePickerScreen}
            options={{ presentation: 'modal', title: 'Legg til øvelse' }}
          />
          <Stack.Screen
            name="CreateExercise"
            component={CreateExerciseScreen}
            options={{ presentation: 'modal', title: 'Ny øvelse' }}
          />
...
