appId: com.kjetilvalle.trene
name: Select an existing exercise for a workout
tags:
  - smoke
  - android
---
- launchApp

- extendedWaitUntil:
    visible: "Klar for en trening?"
    timeout: 120000
- tapOn: "Øvelser"
- tapOn: "Opprett første øvelse"
- tapOn:
    id: "exercise-name-input"
- setClipboard: "Knebøy"
- pasteText
- tapOn:
    id: "create-exercise-submit"
- extendedWaitUntil:
    visible: "Historikk"
    timeout: 30000
- pressKey: BACK
- extendedWaitUntil:
    visible: "Søk i øvelser"
    timeout: 30000
- assertVisible: "Knebøy"
- pressKey: BACK
- extendedWaitUntil:
    visible: "Klar for en trening?"
    timeout: 30000

- tapOn: "Start trening"
- extendedWaitUntil:
    visible: "Ingen øvelser lagt til ennå"
    timeout: 30000
- tapOn: "Legg til øvelse"
- extendedWaitUntil:
    visible: "Knebøy"
    timeout: 30000
- tapOn: "Søk i øvelser"
- inputText: "kneb"
- assertVisible: "Knebøy"
- tapOn: "Avbryt"
- extendedWaitUntil:
    visible: "Ingen øvelser lagt til ennå"
    timeout: 30000

- tapOn: "Legg til øvelse"
- extendedWaitUntil:
    visible: "Knebøy"
    timeout: 30000
- tapOn: "Knebøy"
- extendedWaitUntil:
    visible: "Rediger sett 1 for Knebøy"
    timeout: 30000
- assertVisible: "Planlagt"
- assertVisible: "Knebøy"
- tapOn: "Legg til øvelse"
- extendedWaitUntil:
    visible: "Alle eksisterende øvelser er lagt til"
    timeout: 30000
